--- a/lunch/quickneasy.html
+++ b/lunch/quickneasy.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -132,7 +134,7 @@
   <!-- banner -->
 
   <div class="banner">
-    <img src="images/White Coffee Banner.jpg" alt="">
+    <img src="../images/quickneasy-banner.jpg" alt="">
   </div>
 
 
@@ -140,45 +142,45 @@
 
 
   <div class="heading">
-    <h1> Breakfast Classics ➡️ </h1>
+    <h1> Quick & Easy ➡️ </h1>
   </div>
 
 
   <!-- homepage images images -->
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b1.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/A Summery Potato & Bean Salad With Chicken And Egg-lunch.jpg" alt="">
       </a>
-      <div class="desc"> <a href=""> Eggs </a> </div>
+      <div class="desc"> <a href=""> Summery Potato & Bean Salad With Chicken And Egg </a> </div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b2.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/Fish Taco Bowl with Zingy Yogurt Dressing -lunch.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Mixed Berry Smoothie Bowls </a> </div>
+      <div class="desc"><a href=""> Fish Taco Bowl with Zingy Yogurt Dressing </a> </div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b3.jpeg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/Mango Chicken Salad with Ginger Dressing-lunch.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Bacon, Egg, and Cheese Sandwich</a></div>
+      <div class="desc"><a href="">Mango Chicken Salad with Ginger Dressing</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b4.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/bumble-bee-solid-white-albacore-lunch.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Fried Egg, Sausage bowl</a></div>
+      <div class="desc"><a href="">Solid white albacore</a></div>
     </div>
   </div>
   <br>
@@ -190,38 +192,38 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b12.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/Vegan Burrito Salad Bowls-lunch.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Egg Sandwich</a></div>
+      <div class="desc"><a href="">Vegan Burrito Salad Bowls</a></div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b10.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/Chicken Avocado Salad-lunch" alt="">
       </a>
-      <div class="desc"><a href="">PIZZAA </a></div>
+      <div class="desc"><a href="">Chicken Avocado Salad </a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b11.jpg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/Balsamic Bliss Bowls-lunch.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Doughnuts</a></div>
+      <div class="desc"><a href="">Balsamic Bliss Bowls</Blockquote></a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b9.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/Italian Pasta Salad-lunch.web.webp" alt="">
       </a>
-      <div class="desc"><a href="">Strawberry cream </a></div>
+      <div class="desc"><a href="">Italian Pasta salad </a></div>
     </div>
   </div>
   <div class="clearfix"></div>
@@ -229,38 +231,38 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b1.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/chicke-applewraps-lunch.jpg" alt="">
       </a>
-      <div class="desc"> <a href=""> Eggs </a> </div>
+      <div class="desc"> <a href=""> Chicken Apple wraps </a> </div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b2.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/Mexican Coleslaw-lunch.webp" alt="">
       </a>
-      <div class="desc"><a href="">Mixed Berry Smoothie Bowls </a> </div>
+      <div class="desc"><a href="">Mexican Coleslaw </a> </div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b3.jpeg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/Bread sushi-lunch.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Bacon, Egg, and Cheese Sandwich</a></div>
+      <div class="desc"><a href="">Bread Sushi</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b4.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/porksalad-lunch.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Fried Egg, Sausage bowl</a></div>
+      <div class="desc"><a href="">Pork Salad</a></div>
     </div>
   </div>
   <br>
@@ -270,7 +272,7 @@
 
   <!-- footer banner -->
   <div class="banner1">
-    <img src="images/bottombanner.jpg" alt="">
+    <img src="../images/quickneasy-banner-bottom.jpg" alt="">
   </div>
 
   <!-- footer -->
@@ -278,18 +280,18 @@
   <footer>
     <div class="footer">
       <div class="navbar-right">
-        <a class="logo">Msosii.🍜</a>
+        <a href="../home.html" class="logo">Msosii.🍜</a>
       </div>
       <div class="footer-content">
-        <p><a href="#">Home</a></p><br>
-        <p><a href="breakfast/appetizer.html">Breakfast</a></p><br>
-        <p><a href="dinner/deserts.html">Dinner</a></p><br>
-        <p><a href="lunch/maindishes.html">Lunch</a></p><br>
+        <p><a href="../home.html">Home</a></p><br>
+        <p><a href="../breakfast/appetizer.html">Breakfast</a></p><br>
+        <p><a href="../dinner/deserts.html">Dinner</a></p><br>
+        <p><a href="maindishes.html">Lunch</a></p><br>
       </div>
       <div class="footer-content1">
-        <p><a href="occassions/weddings.html">Ocassions</a></p><br>
-        <p><a href="tips/ingredients.html">Tips</a></p><br>
-        <p><a href="news/celebrity.html">News</a></p>
+        <p><a href="../occassions/weddings.html">Ocassions</a></p><br>
+        <p><a href="../tips/ingredients.html">Tips</a></p><br>
+        <p><a href="../news/celebrity.html">News</a></p>
       </div>
       <div class="footer-content2">
         <p><a href="#">About Us</a></p><br>
