--- a/lunch/quickneasy.html
+++ b/lunch/quickneasy.html
@@ -55,7 +55,7 @@
         <a href="fewingredients.html">Few Ingredients</a>
         <a href="onepotmeal.html">One pot meal</a>
         <a href="appetizers.html">Appetizers</a>
-        <a href="deserts.html">Deserts</a>
+        <a href="deserts.html">Desserts</a>
 
       </div>
     </div>
@@ -72,7 +72,7 @@
         <a href="../dinner/fewingredients.html">Few Ingredients</a>
         <a href="../dinner/onepotmeal.html">One pot meal</a>
         <a href="../dinner/appetizers.html">Appetizers</a>
-        <a href="../dinner/deserts.html">Deserts</a>
+        <a href="../dinner/deserts.html">Desserts</a>
       </div>
     </div>
 
