--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
         <a href="lunch/fewingredients.html">Few Ingredients</a>
         <a href="lunch/onepotmeal.html">One pot meal</a>
         <a href="lunch/appetizers.html">Appetizers</a>
-        <a href="lunch/deserts.html">Deserts</a>
+        <a href="lunch/deserts.html">Desserts</a>
 
       </div>
     </div>
@@ -72,7 +72,7 @@
         <a href="dinner/fewingredients.html">Few Ingredients</a>
         <a href="dinner/onepotmeal.html">One pot meal</a>
         <a href="dinner/appetizers.html">Appetizers</a>
-        <a href="dinner/deserts.html">Deserts</a>
+        <a href="dinner/deserts.html">Desserts</a>
       </div>
     </div>
 
