dinner-images complete

--- a/dinner/fewingredients.html
+++ b/dinner/fewingredients.html
@@ -55,7 +55,7 @@
         <a href="../lunch/fewingredients.html">Few Ingredients</a>
         <a href="../lunch/onepotmeal.html">One pot meal</a>
         <a href="../lunch/appetizers.html">Appetizers</a>
-        <a href="../lunch/deserts.html">Deserts</a>
+        <a href="../lunch/deserts.html">Desserts</a>
 
       </div>
     </div>
@@ -72,7 +72,7 @@
         <a href="#">Few Ingredients</a>
         <a href="onepotmeal.html">One pot meal</a>
         <a href="appetizers.html">Appetizers</a>
-        <a href="deserts.html">Deserts</a>
+        <a href="deserts.html">Desserts</a>
       </div>
     </div>
 
@@ -111,7 +111,7 @@
         <a href="../news/grocery.html">Grocery</a>
         <a href="../news/featured.html">Featured</a>
         <a href="../news/celebrity.html">Celebrity chefs</a>
-        <a href="../news/channels.html">Chan../home.html
+        <a href="../news/channels.html">Channels</a>
       </div>
     </div>
 
@@ -133,8 +133,10 @@
 
   <!-- banner -->
 
+  <!-- banner -->
+
   <div class="banner">
-    <img src="images/White Coffee Banner.jpg" alt="">
+    <img src="../images/dinner-fi-banner.jpg" alt="">
   </div>
 
 
@@ -142,45 +144,45 @@
 
 
   <div class="heading">
-    <h1> Breakfast Classics ➡️ </h1>
+    <h1> Few Ingredients ➡️ </h1>
   </div>
 
 
   <!-- homepage images images -->
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b1.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/{One Pan} Sausage Pesto & Veggies-fi.webp" alt="">
       </a>
-      <div class="desc"> <a href=""> Eggs </a> </div>
+      <div class="desc"> <a href=""> Sausage Pesto & Veggies </a> </div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b2.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/poached egg and basil on toast -fi.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Mixed Berry Smoothie Bowls </a> </div>
+      <div class="desc"><a href="">Poached egg and basil on toast </a> </div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b3.jpeg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/Strawberry Basil Bruschetta-fi.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Bacon, Egg, and Cheese Sandwich</a></div>
+      <div class="desc"><a href="">Strawberry Basil Bruschetta</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b4.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/Easy Chicken Teriyaki Bowl -fi.webp" alt="">
       </a>
-      <div class="desc"><a href="">Fried Egg, Sausage bowl</a></div>
+      <div class="desc"><a href="">Easy Chicken Teriyaki Bowl</a></div>
     </div>
   </div>
   <br>
@@ -192,38 +194,38 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b12.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/Sweet Potato Tuna Melts-fi.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Egg Sandwich</a></div>
+      <div class="desc"><a href="">Sweet Potato Tuna Melts</a></div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b10.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/Sausage Pesto & Veggies-fi.jpg" alt="">
       </a>
-      <div class="desc"><a href="">PIZZAA </a></div>
+      <div class="desc"><a href="">Sausage Pesto & Veggies </a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b11.jpg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/Honey Sesame Chicken-fi.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Doughnuts</a></div>
+      <div class="desc"><a href="">Honey Sesame Chicken</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b9.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/Heirloom Tomato Tart-fi.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Strawberry cream </a></div>
+      <div class="desc"><a href="">Heirloom Tomato Tart</a></div>
     </div>
   </div>
   <div class="clearfix"></div>
@@ -231,38 +233,38 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b1.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/pineapple-salsa.-fi webp.webp" alt="">
       </a>
-      <div class="desc"> <a href=""> Eggs </a> </div>
+      <div class="desc"> <a href=""> Pineapple salsa </a> </div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b2.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/Scrambled Eggs -fi.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Mixed Berry Smoothie Bowls </a> </div>
+      <div class="desc"><a href="">Scrambled Eggs </a> </div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b3.jpeg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/Roasted Salsa-fi.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Bacon, Egg, and Cheese Sandwich</a></div>
+      <div class="desc"><a href="">Roasted Salsa</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b4.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/Burgers-fi.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Fried Egg, Sausage bowl</a></div>
+      <div class="desc"><a href="">Burgers</a></div>
     </div>
   </div>
   <br>
@@ -272,25 +274,26 @@
 
   <!-- footer banner -->
   <div class="banner1">
-    <img src="images/bottombanner.jpg" alt="">
+    <img src="../images/dinner-fi-bottom-banner.jpg" alt="">
   </div>
 
   <!-- footer -->
+
   <footer>
     <div class="footer">
       <div class="navbar-right">
         <a class="logo">Msosii.🍜</a>
       </div>
       <div class="footer-content">
-        <p><a href="#">Home</a></p><br>
-        <p><a href="breakfast/appetizer.html">Breakfast</a></p><br>
-        <p><a href="dinner/deserts.html">Dinner</a></p><br>
-        <p><a href="lunch/maindishes.html">Lunch</a></p><br>
+        <p><a href="../home.html">Home</a></p><br>
+        <p><a href="../breakfast/colddrinks.html">Breakfast</a></p><br>
+        <p><a href="../dinner/deserts.html">Dinner</a></p><br>
+        <p><a href="maindishes.html">Lunch</a></p><br>
       </div>
       <div class="footer-content1">
-        <p><a href="occassions/weddings.html">Ocassions</a></p><br>
-        <p><a href="tips/ingredients.html">Tips</a></p><br>
-        <p><a href="news/celebrity.html">News</a></p>
+        <p><a href="../occassions/weddings.html">Ocassions</a></p><br>
+        <p><a href="../tips/ingredients.html">Tips</a></p><br>
+        <p><a href="../news/celebrity.html">News</a></p>
       </div>
       <div class="footer-content2">
         <p><a href="#">About Us</a></p><br>
