--- a/dinner/maindishes.html
+++ b/dinner/maindishes.html
@@ -55,7 +55,7 @@
         <a href="../lunch/fewingredients.html">Few Ingredients</a>
         <a href="../lunch/onepotmeal.html">One pot meal</a>
         <a href="../lunch/appetizers.html">Appetizers</a>
-        <a href="../lunch/deserts.html">Deserts</a>
+        <a href="../lunch/deserts.html">Desserts</a>
 
       </div>
     </div>
@@ -72,7 +72,7 @@
         <a href="fewingredients.html">Few Ingredients</a>
         <a href="onepotmeal.html">One pot meal</a>
         <a href="appetizers.html">Appetizers</a>
-        <a href="deserts.html">Deserts</a>
+        <a href="deserts.html">Desserts</a>
       </div>
     </div>
 
@@ -134,53 +134,52 @@
   <!-- banner -->
 
   <div class="banner">
-    <img src="images/White Coffee Banner.jpg" alt="">
+    <img src="../images/dinne-mainbanner.webp" alt="">
   </div>
 
 
   <!-- Centered link -->
 
-
   <div class="heading">
-    <h1> Breakfast Classics ➡️ </h1>
+    <h1> Main Dishes ➡️ </h1>
   </div>
 
 
   <!-- homepage images images -->
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b1.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/Char-Grilled Salmon with Avocado, Cucumber & Dill-maindish.jpg" alt="">
       </a>
-      <div class="desc"> <a href=""> Eggs </a> </div>
+      <div class="desc"> <a href=""> Char-Grilled Salmon with Avocado,Cucumber & Dill </a> </div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b2.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/Bacon Egg and Spinach Fried Rice-maindish.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Mixed Berry Smoothie Bowls </a> </div>
+      <div class="desc"><a href="">Bacon Egg and Spinach Fried Rice</a> </div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b3.jpeg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/Sticky Asian Glazed Meatballs-maindish.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Bacon, Egg, and Cheese Sandwich</a></div>
+      <div class="desc"><a href="">Sticky Asian Glazed Meatballs</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b4.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/Brown Sugar-Glazed Meat Loaf-maindish.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Fried Egg, Sausage bowl</a></div>
+      <div class="desc"><a href="">Brown Sugar-Glazed Meat Loaf</a></div>
     </div>
   </div>
   <br>
@@ -192,38 +191,38 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b12.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/Asian Meatball and Rice Toss-maindish.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Egg Sandwich</a></div>
+      <div class="desc"><a href="">Asian Meatball and Rice Toss</a></div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b10.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/bengali chicken curry-maindish.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">PIZZAA </a></div>
+      <div class="desc"><a href="">Bengali chicken curry </a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b11.jpg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/Rice with Beef Stew-maindish.webp" alt="">
       </a>
-      <div class="desc"><a href="">Doughnuts</a></div>
+      <div class="desc"><a href="">Rice with Beef Stew-maindish</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b9.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/Tomato Basil Rice-maindish.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Strawberry cream </a></div>
+      <div class="desc"><a href="">Tomato Basil Rice </a></div>
     </div>
   </div>
   <div class="clearfix"></div>
@@ -231,38 +230,38 @@
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_5terre.jpg">
-        <img src="images/b1.jpeg" alt="Cinque Terre">
+      <a target="_blank" href="#">
+        <img src="../images/masala chilli chicken-maindish.jpg" alt="">
       </a>
-      <div class="desc"> <a href=""> Eggs </a> </div>
+      <div class="desc"> <a href="">Masala chilli chicken </a> </div>
       <div class="desc1"></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_forest.jpg">
-        <img src="images/b2.jpg" alt="Forest">
+      <a target="_blank" href="#">
+        <img src="../images/bombay potatoes-maindish.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Mixed Berry Smoothie Bowls </a> </div>
+      <div class="desc"><a href="">Bombay potatoes </a> </div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_lights.jpg">
-        <img src="images/b3.jpeg" alt="Northern Lights">
+      <a target="_blank" href="#">
+        <img src="../images/Beef Curry-maindish.jpg" alt="">
       </a>
-      <div class="desc"><a href="">Bacon, Egg, and Cheese Sandwich</a></div>
+      <div class="desc"><a href="">Beef Curry</a></div>
     </div>
   </div>
 
   <div class="responsive">
     <div class="gallery">
-      <a target="_blank" href="img_mountains.jpg">
-        <img src="images/b4.jpeg" alt="Mountains">
+      <a target="_blank" href="#">
+        <img src="../images/Mango Chicken Salad with Ginger Dressing-lunch.jpeg" alt="">
       </a>
-      <div class="desc"><a href="">Fried Egg, Sausage bowl</a></div>
+      <div class="desc"><a href="">Mango Chicken Salad with Ginger Dressing</a></div>
     </div>
   </div>
   <br>
@@ -272,25 +271,26 @@
 
   <!-- footer banner -->
   <div class="banner1">
-    <img src="images/bottombanner.jpg" alt="">
+    <img src="../images/maindish-banner-bottom.jpg" alt="">
   </div>
 
   <!-- footer -->
+
   <footer>
     <div class="footer">
       <div class="navbar-right">
-        <a class="logo">Msosii.🍜</a>
+        <a href="../home.html" class="logo">Msosii.🍜</a>
       </div>
       <div class="footer-content">
-        <p><a href="#">Home</a></p><br>
-        <p><a href="breakfast/appetizer.html">Breakfast</a></p><br>
-        <p><a href="dinner/deserts.html">Dinner</a></p><br>
-        <p><a href="lunch/maindishes.html">Lunch</a></p><br>
+        <p><a href="../home.html">Home</a></p><br>
+        <p><a href="../breakfast/appetizer.html">Breakfast</a></p><br>
+        <p><a href="../dinner/deserts.html">Dinner</a></p><br>
+        <p><a href="#">Lunch</a></p><br>
       </div>
       <div class="footer-content1">
-        <p><a href="occassions/weddings.html">Ocassions</a></p><br>
-        <p><a href="tips/ingredients.html">Tips</a></p><br>
-        <p><a href="news/celebrity.html">News</a></p>
+        <p><a href="../occassions/weddings.html">Ocassions</a></p><br>
+        <p><a href="../tips/ingredients.html">Tips</a></p><br>
+        <p><a href="../news/celebrity.html">News</a></p>
       </div>
       <div class="footer-content2">
         <p><a href="#">About Us</a></p><br>
